# django-e-shop

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
docs/: .buildinfo  index.html
docs/_build/html/: py-modindex.html  search.html  searchindex.js
docs/_sources/apiapp/: api_views.rst.txt
docs/_sources/cartapp/: cart.rst.txt
docs/_sources/orderapp/: order.rst.txt  order_models.rst.txt
docs/catalogapp/: catalog_views.html
docs/orderapp/: order.html  order_forms.html  order_models.html
docs/userapp/: user.html  user_admin.html  user_models.html
eshop/api/: serializers.py  tests.py  urls.py  views.py
eshop/cart/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
eshop/cart/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
eshop/cart/templates/: cart.html  cart_detail.html
eshop/catalog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
eshop/catalog/fixtures/: products.json
eshop/catalog/migrations/: 0001_initial.py  0002_initial.py
eshop/catalog/templates/: catalog_list.html  contacts.html  create_product.html  my_products.html  pagination.html  product_detail.html
eshop/docs/: conf.py  index.rst  user.rst
eshop/docs/orderapp/: order_forms.rst
eshop/docs/userapp/: user.rst  user_jwt.rst  user_models.rst
eshop/eshop/: settings.py  urls.py
eshop/eshop/templates/: base.html
eshop/order/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
eshop/user/: admin.py  forms.py  jwt.py  middleware.py  models.py  tests.py  urls.py  views.py
(+51 files in other folders)
