[tool.poetry]
name = "django-e-shop"
version = "0.1.0"
description = "Online store website (fronted & backend) on Django"
authors = ["Dragon066 <NickTitov123@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
pillow = "^10.4.0"
pyjwt = "^2.8.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-mathfilters = "^1.0.0"
drf-yasg = "^1.21.7"
pytest = "^8.3.2"
setuptools = "^72.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
autoflake = "^2.3.1"
pre-commit = "^3.8.0"


[tool.black]
line-length = 79
exclude = ".venv"

[tool.isort]
profile = "black"
skip = [".venv"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
